fix overlapping text with long artist names in album view.
Fixes issue #6740. In order to avoid overlapping text, the .detailPagePrimaryContainer selector is set to flex: 1. This forces us to use an alternate method of placing the album art card, to avoid it moving offscreen.

--- a/src/styles/librarybrowser.scss
+++ b/src/styles/librarybrowser.scss
@@ -782,6 +782,7 @@
     align-items: center;
     align-content: center;
     z-index: 2;
+    flex: 1;
 
     .layout-mobile & {
         display: block;
@@ -920,6 +921,11 @@
         .layout-desktop & {
             right: 3.3%;
         }
+    }
+
+    &.cardCentered {
+        top: 50% !important;
+        transform: translateY(-50%) !important;
     }
 }
 
